# github-actions-runners

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-runner-image.yml  test-runner.yml
ansible/: ansible.cfg
ansible/group_vars/all/: vars.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: deploy-arc.yml  reset-arc.yml
ansible/roles/arc-controller/defaults/: main.yml
ansible/roles/arc-controller/tasks/: main.yml
ansible/roles/arc-runner-set/defaults/: main.yml
ansible/roles/arc-runner-set/tasks/: main.yml
helm-values/: arc-controller.yaml  arc-runner-set.yaml
images/runner/: Dockerfile
kubernetes/namespaces/: arc-runners.yaml  arc-systems.yaml
kubernetes/storage/: runner-cache-pvc.yaml
scripts/: build-local.sh  setup-github-app.md
