[project]
name = "github-actions-runners"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible>=13.0.0",
    "kubernetes>=34.1.0",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools>=3.23.0",
    "bandit>=1.9.2",
    "cfn-lint>=1.41.0",
    "codeguru-profiler-agent>=1.2.5",
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
    "isort>=7.0.0",
    "pdoc3>=0.11.6",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.6",
]
